[list]
[*]Added support between Thorium Mod and the following mod(s): Catalyst Mod.
[*]Fixed support between Thorium Mod and the following mod(s): Melee Effects+.
[/list]