@@ -48,7 +48,8 @@ Mods: {
 					ThoriumMod: Thorium Mod
 					UniversalCraft: Universal Crafter
 					WWeaponScaling: W1K's Weapon Scaling
-					LevelPlus: Level Plus
+					LevelPlus: Level+
+					ModLoader: Vanilla / tModLoader
 				}
 			}
 
