@@ -1,4 +1,5 @@
 [list]
 [*]Added support between Thorium Mod and the following mod(s): Catalyst Mod.
+[*]The Level+ Dexterity stat now boosts throwing damage and crit. chance.
 [*]Fixed support between Thorium Mod and the following mod(s): Melee Effects+.
 [/list]
